@@ -1,3 +1,7 @@
+2012-01-25 Pierre Wieser <pwieser@trychlos.org>
+
+	* run-distcheck.sh: Deletes the rest part of an aborded build.
+
 2012-01-23 Pierre Wieser <pwieser@trychlos.org>
 
 	* run-autogen.sh: Deletes the rest part of an aborded build.
